<resources>
    <string name="app_name">Collections</string>
<!--    <string name="app_name_test">Collections Debug</string>-->
    <string name="welcome_to_collections">Welcome to Collections</string>

    <string name="signin_captcha">send sms</string>
    <string name="signin_account_title">Account:</string>
    <string name="signin_pwd_title">Password:</string>
    <string name="signin_captcha_title">Captcha code:</string>
    <string name="login_login">Login</string>
    <string name="dash_board">Dashboard</string>
    <string name="tickets">Tickets</string>

    <string name="willing_to_pay">Willing to pay</string>
    <string name="no_willing">Nowilling</string>
    <string name="not_customer">Not customer</string>
    <string name="not_receive_money">Not recieve money</string>
    <string name="already_paid_but_delay">Already paid but delay</string>
    <string name="partial_pay_first">Partial pay first</string>
    <string name="not_pick">Not pick</string>

    <string name="take">Take</string>
    <string name="ring">Ring</string>
    <string name="does_not_exist">Does not exist</string>
    <string name="out_of_service">Out of service</string>
    <string name="va_link">Dear %s, this is your offline repayment link : %s</string>

    <string name="record">Record</string>
    <string name="collection_log">Collection Log</string>
    <string name="ticket_list">Ticket List</string>
    <string name="copy">Copy</string>
    <string name="call">Call</string>
    <string name="sms">Sms</string>
    <string name="records">Records</string>
    <string name="mobile">Mobile</string>
    <string name="whats_app">WhatsApp</string>
    <string name="submit">Submit</string>
    <string name="submit_note">Submit Note</string>
    <string name="no_take_record">No take record</string>
    <string name="click_to_select">Click to select:</string>
    <string name="select_time">Select time:</string>

    <string name="there_is_no_corresponding">There is no corresponding call log in this phone ,please complete the call before recording or selecting the correct person.</string>

    <string name="all">All</string>
    <string name="progressing_ptp">Progressing-PTP</string>
    <string name="cleared">Cleared</string>
    <string name="closed">Closed</string>
    <string name="progressing">Progressing</string>
    <string name="detail">Detail</string>

    <string name="setting_feed_back">Feedback</string>
    <string name="setting_logout">Logout</string>
    <string name="setting_about">About</string>
    <string name="sync_call_record">Sync call record...</string>

    <string name="ok_str">OK</string>
    <string name="cancel_str">Cancel</string>
</resources>