<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cm_dp_56">

        <ImageView
            android:id="@+id/iv_record_back"
            android:layout_width="@dimen/cm_dp_32"
            android:layout_height="@dimen/cm_dp_32"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:src="@drawable/btn_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_item_title"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/cm_dp_20"
            android:includeFontPadding="false"
            android:text="@string/records"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/cm_dp_15"
        android:layout_height="@dimen/cm_dp_56">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_record_mobile"
                android:layout_width="@dimen/cm_dp_120"
                android:orientation="horizontal"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:background="@drawable/selector_radius_left_15"
                android:paddingEnd="@dimen/cm_dp_10"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:text="@string/mobile"
                    android:textColor="@drawable/selector_record_tv_color"
                    android:textSize="@dimen/cm_sp_18"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_record_whatapp"
                android:layout_width="@dimen/cm_dp_120"
                android:layout_gravity="center_vertical|start"
                android:paddingStart="@dimen/cm_dp_10"
                android:background="@drawable/selector_radius_right_15"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:text="@string/whats_app"
                    android:textColor="@drawable/selector_record_tv_color"
                    android:textSize="@dimen/cm_sp_18"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/cm_dp_15"
        android:layout_marginStart="@dimen/cm_dp_15"
        android:layout_marginEnd="@dimen/cm_dp_15"
        android:layout_height="0dp">

        <com.loan.staffmgr.widget.NoScrollViewPager
            android:id="@+id/vp_record_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_radius_white_15" />

    </FrameLayout>

</LinearLayout>